# nathan-project-ds

./: README.md  Relation Between Lay and Back Prices and Volume of Runners.ipynb  SAMPLE DATA UPWORK.xlsx  Untitled.ipynb  pyproject.toml
.ipynb_checkpoints/: Relation Between Lay and Back Prices and Volume of Runners-checkpoint.ipynb
