[tool.poetry]
name = "nathan"
version = "0.1.0"
description = ""
authors = ["Marcos Pereira <marcos.p.10@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
pandas = "^2.1.3"
openpyxl = "^3.1.2"
seaborn = "^0.13.0"
statsmodels = "^0.14.0"
pandoc = "^2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
